testing/errors/nopseudopccontext1.a
	*=$1000
label	nop
	a = &label
